@@ -8,6 +8,9 @@
     the caller, and have the callers re-use that.  This avoids useless overhead
     of calling strlen() over and over.  Fix by Frans Meulenbroeks.
 
+  * src/svf/svf_flex.l (fix_yylloc): Accept the string length from caller to
+    avoid useless overhead of calling strlen().  Fix by Frans Meulenbroeks.
+
 2010-08-26  Mike Frysinger  <vapier@gentoo.org>
 
   * src/tap/cable/gpio.c: Rewrite to use raw file descriptors when working with
